--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body style="background-color: #f3f4f6;">
-    <div  id="root" ></div>
+  <body >
+    <div style="background-color: #f9fafb;" id="root" ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
