--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React + TS</title>
   </head>
   <body >
-    <div style="background-color: #f9fafb;" id="root" ></div>
+    <div style="background-color: white;" id="root" ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
